# crates-warehouse

./: .gitignore  Cargo.toml  LICENSE  README.md
baken-geo/: Cargo.toml
baken-geo/src/: lib.rs
baken-import-wasm/: Cargo.toml
baken-import-wasm/src/: lib.rs
bro-xml/: Cargo.toml  README.md
bro-xml/src/: bhr_g.rs  bhr_gt.rs  cpt.rs  document.rs  error.rs  lib.rs  reference_codes.rs  xml.rs
bro-xml/tests/: boreholes.rs  cpt.rs  detection.rs  errors.rs  reference_codes.rs
bro-xml/tests/fixtures/: bhr-g-dispatch.xml  bhr-g-minimal.xml  bhr-gt-minimal.xml  cpt-dispatch-location.xml  cpt-minimal.xml
cpt-core/: Cargo.toml  README.md
cpt-core/examples/: render_multi_pdf.rs  render_pdf.rs  render_png.rs
cpt-core/src/: coords.rs  domain.rs  error.rs  ifc.rs  ifcgis.rs  layers.rs  lib.rs  pdf.rs  report.rs  robertson.rs  write.rs
cpt-core/src/bro/: columns.rs  mod.rs
cpt-core/src/gef/: columns.rs  data.rs  header.rs  mod.rs
cpt-core/src/plot/: axes.rs  curves.rs  mod.rs  sbt_strip.rs
cpt-core/tests/: common.rs  test_bro.rs  test_coords.rs  test_domain.rs  test_gef.rs  test_layers.rs  test_parse_auto.rs  test_plot.rs  test_report.rs  test_robertson.rs
klic2geo/: Cargo.toml
klic2geo/src/: lib.rs  main.rs
open-geotechniek-kernel/: Cargo.toml  README.md
open-geotechniek-kernel/src/: cpt.rs  error.rs  import.rs  lib.rs  object.rs  project.rs  project_file.rs
open-geotechniek-kernel/tests/: import.rs  project.rs  project_file.rs
open-geotechniek-kernel/tests/fixtures/: bhr-gt-minimal.xml  cpt-dispatch-location.xml  cpt-non-rd.xml  legacy-project.ifcgis
openaec-cli/: Cargo.toml
openaec-core/: Cargo.toml
openaec-core/src/: block_renderer.rs  brand.rs  document.rs  engine.rs  json_adapter.rs  special_pages.rs  styles.rs  template_config.rs  template_loader.rs  toc.rs
openaec-dwg-parser/: .gitignore  Cargo.toml  SPEC_NOTES.md  bit_stream_fix.md
openaec-dwg-parser/src/: bitreader.rs  lib.rs  parser.rs  r2007.rs
openaec-dxf-importer/: Cargo.toml
openaec-dxf-importer/src/: lib.rs  walker.rs
openaec-dxf-importer/src/entities/: arc.rs  bbox.rs  circle.rs  line.rs  mod.rs  polyline.rs
openaec-dxf-importer/tests/: integration.rs
openaec-engine/: Cargo.toml
openaec-engine/src/: font_engine.rs  zone_renderer.rs
openaec-ffi/: Cargo.toml
openaec-layout/: Cargo.toml
openaec-layout/src/: doc_template.rs  table.rs
openaec-server/: Cargo.toml
openaec-server/src/: helpers.rs  main.rs
openaec-server/src/routes/: auth.rs  cloud.rs  generate.rs
plan2geo/: Cargo.toml
plan2geo/src/: export.rs  lib.rs  main.rs
tools/bro-reference-codegen/: Cargo.toml
tools/bro-reference-codegen/src/: main.rs
