[workspace]
resolver = "2"
members = [
    "isso51-api",
    "isso51-core",
    "isso51-ifcx",
    "nta8800-automation",
    "nta8800-cooling",
    "nta8800-demand",
    "nta8800-dhw",
    "nta8800-ep",
    "nta8800-geometry",
    "nta8800-heating",
    "nta8800-humidity",
    "nta8800-lighting",
    "nta8800-model",
    "nta8800-pv",
    "nta8800-tables",
    "nta8800-transmission",
    "nta8800-ventilation",
    "openaec-project-shared",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
