[workspace]
resolver = "2"
members = [
    "cpt-core",
    "isso51-api",
    "isso51-core",
    "isso51-ifcx",
    "nta8800-automation",
    "nta8800-cooling",
    "nta8800-demand",
    "nta8800-dhw",
    "nta8800-ep",
    "nta8800-geometry",
    "nta8800-heating",
    "nta8800-humidity",
    "nta8800-lighting",
    "nta8800-model",
    "nta8800-pv",
    "nta8800-tables",
    "nta8800-transmission",
    "nta8800-ventilation",
    "openaec-project-shared",
    "openaec-core",
    "openaec-layout",
    "openaec-engine",
    "openaec-cli",
    "openaec-ffi",
    "openaec-server",
    "openaec-dwg-parser",
    "openaec-dxf-importer",
    "baken-geo",
    "klic2geo",
    "plan2geo",
    "baken-import-wasm",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# CAD/GIS-import (Baken)
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# PDF generation
printpdf = "0.7"
ttf-parser = "0.25"
lopdf = "0.39"

# Image processing
image = "0.25"
resvg = "0.44"

# Fonts
fontdb = "0.22"

# HTTP / networking
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web server
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Database (0.31 to align with isso51-core; openaec-server source uses only common API)
rusqlite = { version = "0.31", features = ["bundled"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# Cloud storage
openaec-cloud = { git = "https://github.com/OpenAEC-Foundation/openaec-cloud.git" }
uuid = { version = "1", features = ["v4"] }

# FFI
libc = "0.2"

# Testing
tempfile = "3"

# Zelfde DWG/DXF-reader als Open CAD Studio: de OpenAEC-fork van acadrust.
[patch.crates-io]
acadrust = { git = "https://github.com/OpenAEC-Foundation/acadifc", branch = "main" }
