[package]
name = "klic2geo"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "KLIC (WIBON gebiedsinformatielevering, IMKL 2.0 GML) naar het Baken GeoJSON-profiel"

[dependencies]
baken-geo = { path = "../baken-geo" }
zip.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
