[package]
name = "open-geotechniek-kernel"
description = "Content-oriented project facade for geotechnical data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/OpenAEC-Foundation/crates-warehouse"
readme = "README.md"
keywords = ["geotechnical", "bro", "cpt", "ifcx"]
categories = ["science", "data-structures"]

[dependencies]
bro-xml = { version = "0.1.1", path = "../bro-xml" }
cpt-core = { version = "0.1.1", path = "../cpt-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
