[package]
name = "openaec-cli"
description = "CLI tool for OpenAEC report generation"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "openaec-cli"
path = "src/main.rs"

[dependencies]
openaec-core = { path = "../openaec-core" }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
